[gd_scene load_steps=5 format=2]

[ext_resource path="res://VRPlayer/VRController.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 0.15

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.01, 3, 0.01 )

[sub_resource type="SphereShape" id=3]

[node name="VRController" type="ARVRController"]
script = ExtResource( 1 )

[node name="GrabArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="GrabArea"]
shape = SubResource( 1 )

[node name="GrabPos" type="Position3D" parent="."]

[node name="TeleportRayCast" type="RayCast" parent="."]
visible = false
cast_to = Vector3( 0, 16, 0 )

[node name="Mesh" type="MeshInstance" parent="TeleportRayCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="SleepArea" type="Area" parent="."]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="SleepArea"]
shape = SubResource( 3 )
[connection signal="button_pressed" from="." to="." method="_on_VRController_button_pressed"]
[connection signal="button_release" from="." to="." method="_on_VRController_button_release"]
[connection signal="body_entered" from="SleepArea" to="." method="_on_SleepArea_body_entered"]
[connection signal="body_exited" from="SleepArea" to="." method="_on_SleepArea_body_exited"]
